# wfc_2019f

./: .gitignore  noxfile.py  pyproject.toml  wfc_run.py
tests/: conftest.py  test_adjacency.py  test_patterns.py  test_solver.py  test_tiles.py  test_wfc_solver.py
wfc/: __init__.py  adjacency.py  control.py  patterns.py  solver.py  tiles.py  utilities.py  visualize.py  wfc_control.py
