[project]
name = "wfc_python"
version = "0.0.0"
description = "Implementation of wave function collapse in Python."
readme = "README.md"
requires-python = ">=3.5"
license = {file = "LICENSE"}
keywords = ["sample", "wfc", "wave function collapse"]
authors = [{name = "Isaac Karth", email = "isaac@isaackarth.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

dependencies  = [
    "hilbertcurve >=2.0.05",
    "imageio >=2.23.0",
    "matplotlib >=3.6.2",
    "numpy >=1.24.0",
    "scipy >=1.9.3",
]

[project.optional-dependencies]
tests = ["pytest"]
docs = ["sphinx"]
dev = [
    "wfc[tests,docs]",
]

[project.urls]
homepage = "https://github.com/ikarth/wfc_python"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
